--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ayooluwa_olosunde_nodejs_africa_getbusy_task3",
+  "name": "ayooluwa_olosunde_nodejs_africa_getbusy_task3_and_task4",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -14,6 +14,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "request": "^2.88.0",
-    "request-promise": "^4.2.4"
+    "request-promise": "^4.2.4",
+    "store2": "^2.9.0"
   }
 }
